syntax = "proto3";

package taucorder.v1;

option go_package = ".";

message Empty {}

message Node {
    string id = 1;
}

message Addresses {
    repeated string multiaddr = 1;
}

message PingStatus {
    bool up = 1;
    int32 count = 2;
    int32 count_total = 3;
    int64 latency = 4;
}

message Peer {
    string id = 1;
    repeated string addresses = 2;
    PingStatus ping_status = 3;  // did it respond to ping
}

message Peers {
    repeated string pids = 1;
}

message DiscoverServiceRequest {
    Node node = 1;
    int64 timeout = 2;
    int64 count = 3;  // max count
}

message ConsensusStateRequest {
    Node node = 1;
    string pid = 2;
}

message CRDTState {
    repeated string heads = 1;  // cids
}

message ConsensusState {
    Peer member = 1;
    oneof consensus {
        CRDTState crdt = 2;
    }
}